2000-12-02  Chris Demetriou  <cgd@sibyte.com>

        * gas/mips/elf_e_flags.s: Add padding to the end of the
        file so that objdump output will be consistent.
        * gas/mips/elf_e_flags1.d, gas/mips/elf_e_flags2.d,
        gas/mips/elf_e_flags3.d, gas/mips/elf_e_flags4.d: Expect
        "..." at end of objdump output because of zero bytes at end
        of section.
        * gas/mips/elf_e_flags.c: Add note to comment about
        what's changing in elf_e_flags.s.

        * gas/mips/la.s: Add padding to the end of the file so that
        objdump output will be consistent.
        * gas/mips/la-svr4pic.d, gas/mips/la-xgot.d: Expect "..." at
        end of objdump output because of zero bytes at end of
        section.

        * gas/mips/sync.s: Add padding to the end of the file so that
        objdump output will be consistent.
        * gas/mips/sync.d: Expect "..." at end of objdump output
        because of zero bytes at end of section.

        * gas/mips/empic.d: Pad sections out to 16 bytes, to avoid
        alignment issues so tests are useful on multiple targets.
        * gas/mips/empic.s: Likewise.
        * gas/mips/mips16-e.d: Likewise.
        * gas/mips/mips16-e.s: Likewise.
        * gas/mips/mips16-f.d: Likewise.
        * gas/mips/mips16-f.s: Likewise.

        * gas/mips/mips32.d: Expect disassembly of madd and maddu
        to use their correct names.  Add tests for break and sdbbp.
        * gas/mips/mips32.s: Likewise.

        * gas/mips/mips64.s: Add test for assembly of MIPS64
        extensions.
        * gas/mips/mips64.d: Likewise.
        * gas/mips/mips.exp: Test using the new "mips64" test.

2000-12-01  Chris Demetriou  <cgd@sibyte.com>

        * gas/mips/mips16.d: Expect mips16 nops to be used for padding
        when mips16 code generation is enabled.

	* gas/mips/empic.d: Adjust for the fact that the difference
	between two symbols in the same section are not expected to
	generate a reloc.